--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -65,6 +65,15 @@
       "contributions": [
         "example"
       ]
+    },
+    {
+      "login": "nicosommi",
+      "name": "Nico Sommi",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/1702755?s=460&v=4",
+      "profile": "https://www.linkedin.com/in/nicosommi/",
+      "contributions": [
+        "example"
+      ]
     }
   ]
 }
