--- a/examples/with-ts-standard/package.json
+++ b/examples/with-ts-standard/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.0-alpha.2",
   "license": "MIT",
   "scripts": {
+    "start:container": "docker-compose -f devops/docker/local.env.yml  up -d --force-recreate",
     "start": "razzle start",
     "build": "razzle build",
     "test": "razzle test --env=jsdom",
@@ -12,7 +13,9 @@
     "express": "^4.16.3",
     "glamor": "^2.20.40",
     "glamorous": "^4.12.5",
+    "html-webpack-plugin": "^3.2.0",
     "react": "^16.3.2",
+    "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2"
   },
